fix main and footer horizontal dimension

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <main>
             <section id="ms_carousel"> <!--main jumbotron/carousel-->
-                <section id="ms_main-jumbotron" class="ms_jumbo"> <!--main jumbotron-->
+                <section id="ms_main-jumbotron" class="ms_jumbo px-md-5"> <!--main jumbotron-->
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12 col-md-10 col-lg-4">
@@ -97,7 +97,7 @@
                     </div>
                 </section>
 
-                <section class="ms_corousel py-4"> <!--carousel-->
+                <section class="ms_corousel py-4 px-md-4"> <!--carousel-->
                     <div class="container-fluid">
                         <div class="row mx-2 g-3">
 
@@ -142,7 +142,7 @@
                 </section>
             </section>
 
-            <section id="ps5" class="py-5"> <!--section ps5-->
+            <section id="ps5" class="py-5 px-md-5"> <!--section ps5-->
                 <div class="container-fluid">
                     <div class="row py-2"> <!--product introduction-->
                         <div class="col-12">
@@ -209,7 +209,7 @@
                 </div>
             </section>
 
-            <section id="it-takes-two" class="ms_jumbo"> <!--jumbotron "it takes two" game-->
+            <section id="it-takes-two" class="ms_jumbo px-md-5"> <!--jumbotron "it takes two" game-->
                 <div class="container-fluid">
                     <div class="row align-items-end">
                         <div class="col-12 col-md-10 col-lg-4">
@@ -226,7 +226,7 @@
                 </div>
             </section>
 
-            <section id="new-releases" class="py-5"> <!--section new releases-->
+            <section id="new-releases" class="py-5 px-md-5"> <!--section new releases-->
                 <div class="container-fluid">
                     <div class="row"> <!--title-->
                         <div class="col-12">
@@ -319,7 +319,7 @@
                 </div>
             </section>
 
-            <section id="ps4" class="py-5"> <!--section ps4-->
+            <section id="ps4" class="py-5 px-md-5"> <!--section ps4-->
                 <div class="container-fluid">
                     <div class="row py-2"> <!--product introduction-->
                         <div class="col-12">
@@ -363,7 +363,7 @@
                 </div>
             </section>
 
-            <section id="ps-plus"> <!--section ps plus-->
+            <section id="ps-plus" class="ps-md-5"> <!--section ps plus-->
                 <div class="container-fluid">
                     <div class="row align-items-center">
                         <div class="col-12 col-md-6"> <!--title, p & button-->
@@ -383,7 +383,7 @@
                 </div>
             </section>
 
-            <section id="savings" class="py-5"> <!--section savings-->
+            <section id="savings" class="py-5 px-md-5"> <!--section savings-->
                 <div class="container-fluid">
                     <div class="row"> <!--title & p-->
                         <div class="col-12">
@@ -420,7 +420,7 @@
                 </div>
             </section>
 
-            <section id="ps-now" class="text-white"> <!--section ps now-->
+            <section id="ps-now" class="text-white ps-md-5"> <!--section ps now-->
                 <div class="container-fluid">
                     <div class="row align-items-center">
                         <div class="col-12 col-md-6"> <!--title, p & button-->
@@ -480,7 +480,7 @@
             </section>
         </main>
 
-        <footer class="py-5">
+        <footer class="py-5 ps-md-5">
             <div class="container-fluid">
                 <div class="row pb-3"> <!--logo, region & link list-->
 
